💄 -31/03/23 - Adaptation du code pour avoir une belle apparance
💄 -31/03/23 - Adaptation du code pour avoir une belle apparance

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             <div class="difficulte">
                 <ul>
                     <li>
-                        <a onclick="tentative('normal')" type="button" class="normal">Normal</a>
+                        <button onclick="tentative('normal')" type="button" class="btn-norm">Normal</button>
                     </li>
                     <li>
-                        <a onclick="tentative('difficile')" type="button"  class="difficile">Difficile</a>
+                        <button onclick="tentative('difficile')" type="button"  class="btn-dif">Difficile</button>
                     </li>
                     <li>
-                        <a onclick="tdifficile('normal')"  type="button" class="tdifficile">TRES DIFFICILE !</a>
+                        <button onclick="tdifficile('normal')"  type="button" class="btn-tdif">TRES DIFFICILE !</button>
                     </li>
                 </ul>
             </div>
